# jaxfolio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: backtesting.md  custom-strategies.md  data.md  llm.md  optimizers.md  options.md  visualization.md
docs/reference/: backtest.md  data.md  index.md  llm.md  optimizers.md  options.md  stability.md  toolkit.md  types.md  validation.md  viz.md
docs/stylesheets/: extra.css
examples/: 01_quickstart.py  02_method_comparison.py  03_options_strategies.py  04_llm_strategies.py  05_custom_strategy.py
examples/benchmark/: README.md  benchmark.py  libraries.py
examples/validation/: run_matrix.py
src/jaxfolio/: __init__.py  _deprecation.py  custom.py  registry.py  results.py  toolkit.py  types.py
src/jaxfolio/backtest/: __init__.py  engine.py  metrics.py
src/jaxfolio/constraints/: __init__.py  projections.py
src/jaxfolio/data/: __init__.py  loaders.py  returns.py  synthetic.py
src/jaxfolio/llm/: __init__.py  _experimental.py  agents.py  client.py  sentiment.py  strategies.py  views.py
src/jaxfolio/moments/: __init__.py  estimators.py
src/jaxfolio/optimizers/: __init__.py  base.py  classical.py  graph.py  learning.py
src/jaxfolio/options/: __init__.py  greeks.py  overlay.py  pricing.py  strategies.py  surface.py
src/jaxfolio/options/execution/: __init__.py  book.py  costs.py  rolling.py
src/jaxfolio/viz/: __init__.py  plots.py  theme.py
tests/: conftest.py  test_backtest.py  test_constraints.py  test_data.py  test_deprecation.py  test_llm.py  test_llm_experimental.py  test_moments.py  test_optimizers_classical.py  test_optimizers_graph_learning.py  test_options.py  test_options_execution.py  test_options_surface.py  test_overlay_viz.py  test_registry_custom.py  test_robustness.py  test_solver.py
tests/validation/: references.py  test_conditioning.py  test_reference_solvers.py
