[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxfolio"
dynamic = ["version"]
description = "Portfolio optimization and options strategies in JAX — traditional, learning-based, and graph-based methods with impressive dark-themed visualizations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jaxfolio contributors" }]
keywords = [
    "portfolio-optimization",
    "jax",
    "finance",
    "quant",
    "options",
    "risk-parity",
    "black-litterman",
    "hierarchical-risk-parity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "optax>=0.2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.40", "pyarrow>=15.0"]
llm = ["requests>=2.31"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/bravant-oss/jaxfolio"
Repository = "https://github.com/bravant-oss/jaxfolio"
Issues = "https://github.com/bravant-oss/jaxfolio/issues"

[tool.hatch.version]
# Single source of truth: __version__ in src/jaxfolio/__init__.py.
path = "src/jaxfolio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxfolio"]

[tool.uv]
# uv uses [project.optional-dependencies]; dev extras installed with `uv sync --all-extras`.

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]
ignore = [
    "E741",  # ambiguous variable names (l, I) are common in math code
    "E731",  # assigning short lambdas reads cleanly for one-line pricers/objectives
    "B008",  # function calls in argument defaults (jax patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["jaxfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
