[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxfolio"
dynamic = ["version"]
description = "Portfolio optimization and options strategies in JAX — traditional, learning-based, and graph-based methods with impressive dark-themed visualizations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jaxfolio contributors" }]
keywords = [
    "portfolio-optimization",
    "jax",
    "finance",
    "quant",
    "options",
    "risk-parity",
    "black-litterman",
    "hierarchical-risk-parity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
# Runtime dependencies use lower bounds only. We deliberately avoid speculative
# upper caps so jaxfolio composes cleanly in larger environments; `uv.lock` pins
# exact versions for reproducible installs. See SUPPORT.md for the policy. Add a
# narrow upper bound here only when a specific newer major is known to break us,
# with the reason recorded inline.
dependencies = [
    "jax>=0.4.28",
    "jaxlib>=0.4.28",
    "optax>=0.2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.40", "pyarrow>=15.0"]
llm = ["requests>=2.31"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7",
]
# Reference solvers used only by the numerical-validation matrix
# (tests/validation). Kept out of `dev` so the everyday test loop stays lean;
# install with `uv sync --extra validation` or `--all-extras`.
validation = [
    "cvxpy>=1.4",
    "PyPortfolioOpt>=1.5",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/bravant-oss/jaxfolio"
Repository = "https://github.com/bravant-oss/jaxfolio"
Issues = "https://github.com/bravant-oss/jaxfolio/issues"

[tool.hatch.version]
# Single source of truth: __version__ in src/jaxfolio/__init__.py.
path = "src/jaxfolio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jaxfolio"]

[tool.uv]
# uv uses [project.optional-dependencies]; dev extras installed with `uv sync --all-extras`.

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY"]
ignore = [
    "E741",  # ambiguous variable names (l, I) are common in math code
    "E731",  # assigning short lambdas reads cleanly for one-line pricers/objectives
    "B008",  # function calls in argument defaults (jax patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["jaxfolio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Ignore third-party DeprecationWarnings (jax/pandas/etc. churn a lot)...
    "ignore::DeprecationWarning",
    # ...but turn *our own* deprecations into errors so internal callers can
    # never silently depend on a deprecated path (see _deprecation.py).
    "error::DeprecationWarning:jaxfolio",
]

[tool.coverage.run]
source = ["jaxfolio"]
branch = true

[tool.coverage.report]
show_missing = true
# Coverage floor. Set a few points below the measured branch-coverage total
# (~78% after the validation + options-execution test suites); ratchet up over
# time (see CONTRIBUTING.md) — never lower it to make a PR pass.
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # typing.Protocol / abstract stubs
]
